@@ -25,6 +25,7 @@ Version 7.1  [ TODO ]
             - Reflected the result of cp2() so that it has intersection
               form [1], not [-1].
         Class FacetPairing<dim>:
+            - New routine canonical().
             - In findAllPairings(), the action is no longer required to
               take the list of all automorphisms if it does not need them.
         Class HilbertPrimal:
